# package-example

./: README.md  build-boo.sh  build-foo.sh  toolchain.sh
Boo/: CMakeLists.txt  boo.cpp
Foo/: CMakeLists.txt
Foo/Source/foo/: Bar.cpp  Baz.cpp  Baz.hpp
Foo/cmake/: Config.cmake.in
